<resources>
    <string name="app_name">SeaFood</string>
    <string name="title_activity_home_cliente">HomeCliente</string>
    <string name="title_activity_manu_admin">manu_admin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="titulo"></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eslogan">Deleitate en el sabor del Mar</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="perfil">Perfil</string>
    <string name="favoritos">Favoritos</string>
    <string name="pedidos">Pedidos</string>
    <string name="ayuda">Ayuda</string>
    <string name="correo">Correo</string>
    <string name="fechaNac">Fecha de nacimiento</string>
    <string name="numero">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="descripcion">Descripción</string>
    <string name="comentarios">Comentarios</string>
    <string name="menos">-</string>
    <string name="mas">+</string>
    <string name="pedir">Pedir</string>
    <string name="extras">Extras</string>
    <string name="confirmar">Confirmar Pedido</string>
    <string name="detalle">Detalle de tu orden</string>
    <string name="nombre">Nombre</string>
    <string name="total">Total</string>
    <string name="estado">Estado</string>
    <string name="title_activity_home_repartidor">HomeRepartidor</string>
    <string name="inicio">Inicio</string>
    <string name="pedidosdisponibles">Pedidos Disponibles</string>
    <string name="aceptar">Aceptar</string>
    <string name="menu_inicio">Bienvenido</string>
    <string name="menu_categorias">Categorias</string>
    <string name="menu_platillos">Platillos</string>
    <string name="menu_extras">Extras</string>
    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_repartidores">Repartidores</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="historial">Historial</string>
    <string name="envioActual">Envio Actual</string>
    <string name="title_activity_actividad_repartidor">ActividadRepartidor</string>
    <string name="pedidosentregados">Pedidos Entregados</string>
    <string name="ubicacionGuardada">Usar dirección guardada</string>
    <string name="nuevaubicacion">Nueva Ubicación</string>
    <string name="selecionUbicacion">Seleccione su ubicacion de entrega</string>
    <string name="entregar">Entregar Pedido</string>
    <string name="productos">Productos:</string>
    <string name="currentPass">Contraseña actual</string>
    <string name="newPass">Nueva Contraseña</string>
    <string name="confirmPass">Confirmar contraseña</string>
    <string name="changePass">Cambiar contraseña</string>
    <string name="recuperar">¿Olvidaste tu contraseña?</string>

    <string name="actualizar">Actualizar Información</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Envios</string>
    <string name="title_notifications">Notificaciones</string>

    <string name="title_activity_inicio_admin">inicioAdminActivity</string>
    <string name="title_activity_inicio_cliente">inicioCliente</string>
    <string name="saveChanges">Guardar Cambios</string>
    <string name="calificar">Calificar</string>
    <string name="volveraPedir">Volver a pedir</string>
    <string name="subtotal">Subtotal:</string>
    <string name="envio">Envío:</string>
    <string name="tot">Total:</string>
    <string name="moneda">$</string>
    <string name="trazarRuta">Trazar ruta</string>
    <string name="comprar">Comprar</string>
    <string name="cerrarSesion">Cerrar sesión</string>

    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
</resources>