<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".repartidor.PerfilRepartidorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/verde"
            android:fontFamily="serif"
            android:padding="10dp"
            android:text="@string/perfil"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <FrameLayout
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/circle_background">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/circle_background">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imgRepartidor"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:padding="4dp"
                        android:scaleType="centerCrop"
                        app:shapeAppearanceOverlay="@style/roundedImageView"
                        app:strokeColor="@color/gris"
                        app:strokeWidth="4dp" />

                    <ImageButton
                        android:id="@+id/btnNewFoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/fui_transparent"
                        android:src="@android:drawable/ic_menu_camera"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

            <TextView
                android:id="@+id/nombreRepartidor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                android:textSize="14dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editEmailRepartidor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:ems="10"
                    android:enabled="true"
                    android:inputType="textEmailAddress"
                    android:paddingStart="5dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numero"
                android:textSize="14dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTelefonoRepartidor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle"
                    android:ems="10"
                    android:enabled="true"
                    android:inputType="phone"
                    android:paddingStart="5dp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnChangePassRepartidor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:background="@color/fui_transparent"
                android:text="@string/changePass"
                android:textColor="@android:color/holo_blue_light" />

        </LinearLayout>

        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/actualizar" />

        <Button
            android:id="@+id/btnCerrarSesion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/rojo"
            android:text="@string/cerrarSesion" />
    </LinearLayout>

</FrameLayout>