<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".repartidor.EnvioFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/verde"
            android:fontFamily="serif"
            android:padding="10dp"
            android:text="@string/envioActual"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/showDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:animationCache="false"
            android:background="@drawable/rectangle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nameCliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/destino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="this is repartidor fragment"
                    android:textAlignment="center"
                    android:textSize="14dp" />
            </LinearLayout>
        </FrameLayout>

        <fragment
            android:id="@+id/mapEnvio"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            map:cameraZoom="10"
            map:uiRotateGestures="true"
            map:uiZoomControls="true" />

        <Button
            android:id="@+id/btnTrazarRuta"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/trazarRuta"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btnEntregar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/entregar"
            android:textSize="16dp" />
    </LinearLayout>

</FrameLayout>