<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/pedido"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@color/pedido"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/datePedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="TextView"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/direccionPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <LinearLayout
            android:id="@+id/listaProductosPedido"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/productos"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="textEnd"
            android:textSize="16dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnCalificar"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/calificar"
                    android:textColor="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnVolverPedir"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/volveraPedir" />
            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>